# notas_musicais

./: escalas.py  mkdocs.yml  pyproject.toml
docs/: index.md
src/notas_musicais/: cli.py  escalas.py
tests/: test_cli.py  test_escalas.py
