[project]
name = "notas-musicais"
version = "0.1.0"
description = ""
authors = [
    {name = "Your Name",email = "you@example.com"}
]
readme = "README.md"
requires-python = ">=3.12,<4.0"
dependencies = [
]

[tool.poetry]
packages = [{include = "notas_musicais", from = "src"}]


[tool.poetry.group.dev.dependencies]
pytest = "^8.4.2"
pytest-cov = "^6.3.0"
blue = "^0.9.1"
isort = "^6.0.1"
taskipy = "^1.14.1"


[tool.poetry.group.docs.dependencies]
mkdocs-material = "^9.6.19"
mkdocstrings = "^0.30.0"
mkdocstrings-python = "^1.18.2"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.pytest.ini_options]
pythonpath= "/home/Barreto/Desktop/notas_musicais_project/notas_musicais"
addopts= "--doctest-modules"

[tool.isort]
profile= "black"
line_length=79

[tool.taskipy.tasks]
lint = "echo '\n🔵 LINTING WITH BLUE\n' && blue --check --diff . && echo '\n📚 LINTING WITH ISORT\n' && isort --check --diff ."
fix= "isort . && blue ."
docs = "mkdocs serve"
show_docs = "mkdocs serve && firefox http://127.0.0.1:8000/"
pre_test = "task lint"
test= "pytest -s -x -vv --cov=notas_musicais "
post_test= "coverage html"
show_coverage= "coverage html && firefox htmlcov/index.html"
